Refactor MCPResourceSpecificationFactory